[gd_scene load_steps=14 format=2]

[ext_resource path="res://juego/Naves/EstacionRecarga/EstacionRecarga.png" type="Texture" id=1]
[ext_resource path="res://juego/Naves/EstacionRecarga/AreaRecarga.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/Naves/EstacionRecarga/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://juego/musica/recarga2.ogg" type="AudioStream" id=4]
[ext_resource path="res://juego/musica/recargar.ogg" type="AudioStream" id=5]
[ext_resource path="res://juego/Font/Kenney Future.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 59.0
height = 160.0

[sub_resource type="Animation" id=5]
resource_name = "activada"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.5, 2.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 40 ), Vector2( 42, 42 ), Vector2( 40, 40 ), Vector2( 42, 42 ), Vector2( 40, 40 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "defaul"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=8]
size = 23
outline_color = Color( 0.0117647, 0.25098, 0.156863, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.027451, 0.196078, 0.411765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.00784314, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[node name="EstacionRecarga" type="Node2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
z_index = 30
collision_layer = 32
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
texture = ExtResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "defaul"
anims/activada = SubResource( 5 )
anims/defaul = SubResource( 4 )

[node name="CargasSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "disparo"

[node name="VacioSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "disparo"

[node name="Barraenergia" type="ProgressBar" parent="."]
margin_left = -109.0
margin_top = -246.0
margin_right = 110.0
margin_bottom = -205.0
theme = SubResource( 9 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
rounded = true

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
